# API-Ecommerce-in-Rust

./: .env  Cargo.toml  diesel.toml  docker-compose.yml
libs/: relational_database.rs
migrations/2024-09-16-030828_create_user_table/: down.sql
migrations/2024-09-16-150016_create_user_table/: up.sql
models/customer_management/: address.rs  customer.rs  mod.rs  wishlist.rs
models/discount_management/: coupon.rs  discount.rs  mod.rs
models/order_management/: mod.rs  order.rs
models/payment_management/: mod.rs
models/product_management/: category.rs  inventory.rs  mod.rs
models/shipping_management/: mod.rs  tracking.rs
repositories/: mod.rs
routes/: home.rs  login.rs  mod.rs  product.rs  register.rs  users.rs
src/: main.rs  schema.rs
src/libs/: mod.rs
src/models/: mod.rs  product.rs  user.rs
src/models/cart_management/: cart.rs  cart_item.rs
src/models/customer_management/: review.rs  wishlist.rs
src/models/discount_management/: coupon.rs
src/models/order_management/: order_item.rs  payment.rs  shipping.rs
src/models/payment_management/: payment_method.rs  transaction.rs
src/models/product_management/: product.rs  product_variant.rs
src/models/shipping_management/: shipping_method.rs
src/routes/: register.rs  users.rs
src/schemas/: mod.rs  schema_user.rs
